# NSW-DPC

./: README.md  pyproject.toml
dpc/: __init__.py  __main__.py
dpc/data_extraction/loaders/: csv.py
dpc/data_extraction/schema/: patent.py
