[tool.poetry]
name = "nsw-dpc"
version = "0.1.0"
description = ""
authors = ["Rabin Poudyal <rabinpoudyal1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.5.0"
scikit-learn = "^1.3.1"
logging = "^0.4.9.6"
black = "^23.10.0"
typing-extensions = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
